--- a/Sample/SextantSample.BlazorClientSide/App.razor
+++ b/Sample/SextantSample.BlazorClientSide/App.razor
@@ -1,5 +1,5 @@
 ﻿
-<SextantRouter AppAssembly="@typeof(Program).Assembly"
+<NavigationRouter AppAssembly="@typeof(Program).Assembly"
                 ModalComponent="typeof(Sextant.Blazor.Modal.SimpleModal)">
     <Found Context="routeData">
         <ReactiveRouteView RouteData="routeData" />
@@ -9,4 +9,4 @@
             <p>Sorry, there's nothing at this address.</p>
         </LayoutView>
     </NotFound>
-</SextantRouter>
+</NavigationRouter>
