--- a/Sample/SextantSample.BlazorServerSide/App.razor
+++ b/Sample/SextantSample.BlazorServerSide/App.razor
@@ -1,5 +1,5 @@
 <CascadingAuthenticationState>
-    <SextantRouter AppAssembly="@typeof(Program).Assembly"
+    <NavigationRouter AppAssembly="@typeof(Program).Assembly"
                    ModalComponent="typeof(Sextant.Blazor.Modal.SimpleModal)">
         <Found Context="routeData">
             <ReactiveAuthorizeRouteView RouteData="routeData" DefaultLayout="typeof(MainLayout)" />
@@ -9,5 +9,5 @@
                 <p>Sorry, there's nothing at this address.</p>
             </LayoutView>
         </NotFound>
-    </SextantRouter>
+    </NavigationRouter>
 </CascadingAuthenticationState>
